# alcuinNumber

./: pyproject.toml
alcuinnumber/: __init__.py  main.py  project.py  tests.py
